--- a/templates/main_site/catalog.html
+++ b/templates/main_site/catalog.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}{{ page_title }} - Honji Review{% endblock %}
+{% block title %}{{ _(page_title) }} - Honji Review{% endblock %}
 
 {% block content %}
 <section class="py-12">
@@ -8,9 +8,9 @@
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                 <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
             </svg>
-            <span>Назад</span>
+            <span>{{ _('Назад') }}</span>
         </a>
-        <h1 class="page-title">{{ page_title }}</h1>
+        <h1 class="page-title">{{ _(page_title) }}</h1>
     </div>
 
     <div class="flex items-center space-x-6 mb-12">
@@ -21,23 +21,23 @@
         <div class="flex flex-col-reverse md:flex-row gap-8 items-start">
             <div class="flex-1 order-2 md:order-1">
                 {% if review.tag_style == 'purple' %}
-                <span class="inline-block text-sm font-bold text-white py-1 px-3 rounded-full bg-purple-600 mb-4">{{ review.tag }}</span>
+                <span class="inline-block text-sm font-bold text-white py-1 px-3 rounded-full bg-purple-600 mb-4">{{ _(review.tag) }}</span>
                 {% else %}
-                <span class="inline-block text-sm font-bold text-pink-100 py-1 px-3 rounded-full bg-gradient-to-r from-pink-500 to-purple-600 mb-4">{{ review.tag }}</span>
+                <span class="inline-block text-sm font-bold text-pink-100 py-1 px-3 rounded-full bg-gradient-to-r from-pink-500 to-purple-600 mb-4">{{ _(review.tag) }}</span>
                 {% endif %}
-                <h2 class="text-4xl font-bold text-white mb-4">{{ review.title }}</h2>
-                <p class="text-[#EAEAEA] mb-8 max-w-xl">{{ review.description }}</p>
+                <h2 class="text-4xl font-bold text-white mb-4">{{ _(review.title) }}</h2>
+                <p class="text-[#EAEAEA] mb-8 max-w-xl">{{ _(review.description) }}</p>
                 <p class="text-[#8F8F90] font-mono text-sm">{{ review.date }}</p>
             </div>
             <div class="w-full md:w-1/3 order-1 md:order-2 flex-shrink-0">
-                <img src="{{ review.image }}" alt="{{ review.title }}" class="w-full h-auto object-cover rounded-2xl shadow-lg">
+                <img src="{{ review.image }}" alt="{{ _(review.title) }}" class="w-full h-auto object-cover rounded-2xl shadow-lg">
             </div>
         </div>
         {% endfor %}
     </div>
 
     <div class="text-center mt-16">
-        <button class="btn">Загрузить ещё</button>
+        <button class="btn">{{ _('Загрузить ещё') }}</button>
     </div>
 </section>
 {% endblock %}
