refactor app and templates: improve `get_locale` logic with detailed comments, enhance `lang_code` handling in URLs and requests, fix minor typo in `layout.html`

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
 <div class="max-w-[1440px] mx-auto px-6 sm:px-8 md:px-16">
 
     <header class="py-6 flex justify-between items-center">
-        <a href="{{ url_for('main_site.index', lang_code=g.lang_code) }}" class="text-2xl font-bold text-white tracking-wider">HJR</a>
+        <a href="{{ url_for('main_site.index', lang_code=g.lang_code) }}" class="texat-2xl font-bold text-white tracking-wider">HJR</a>
 
         <div class="flex items-center gap-x-8">
             <nav class="hidden md:flex items-center space-x-8 text-white">
