--- a/templates/main_site/index.html
+++ b/templates/main_site/index.html
@@ -3,16 +3,18 @@
 
 {% block content %}
 <section id="hero-section" class="text-center md:text-left">
-    <p class="text-lg text-center text-white mb-10">{{ _('«Чтение — это способ взглянуть на мир чужими глазами.»') }}</p>
-    <div class="max-w-4xl mx-auto md:mx-0">
-        <h1 class="text-4xl sm:text-6xl md:text-[80px] font-extrabold text-white leading-none tracking-tighter">
-            {{ _('Некоторые книги') }}<br>{{ _('не заканчиваются') }}<br>{{ _('с последней страницей') }}
-        </h1>
-        <p class="mt-8 text-xl text-[#EAEAEA] max-w-lg mx-auto md:mx-0">
-            {{ _('Мы делимся историями, что продолжаются внутри. 30+ отзывов уже здесь.') }}
-        </p>
-        <div class="mt-12">
-            <a href="#" class="btn w-full md:w-auto">{{ _('Читать') }}</a>
+    <div class="hero-content">
+        <p class="text-lg text-center text-white mb-10">{{ _('«Чтение — это способ взглянуть на мир чужими глазами.»') }}</p>
+        <div class="max-w-4xl mx-auto md:mx-0">
+            <h1 class="text-4xl sm:text-6xl md:text-[80px] font-extrabold text-white leading-none tracking-tighter">
+                {{ _('Некоторые книги') }}<br>{{ _('не заканчиваются') }}<br>{{ _('с последней страницей') }}
+            </h1>
+            <p class="mt-8 text-xl text-[#EAEAEA] max-w-lg mx-auto md:mx-0">
+                {{ _('Мы делимся историями, что продолжаются внутри. 30+ отзывов уже здесь.') }}
+            </p>
+            <div class="mt-12">
+                <a href="#" class="btn w-full md:w-auto">{{ _('Читать') }}</a>
+            </div>
         </div>
     </div>
 </section>
