--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="{{ url_for('main_site_static.static', filename='css/main_site.css') }}?v=1.2">
     {% block head_css %}{% endblock %}
 </head>
-<body class="bg-[#0E0E10] text-[#EAEAEA]">
-
+<body class="bg-[#0E0E10] text-[#EAEAEA]" {% if open_login_modal %}data-open-login-modal="true"{% endif %}>
 <div class="max-w-[1440px] mx-auto px-6 sm:px-8 md:px-16">
 
     <header class="py-6 flex justify-between items-center">
